add in-subnet-check-render stage

--- a/validation-test/workflows/discover-validation-tests.yaml
+++ b/validation-test/workflows/discover-validation-tests.yaml
@@ -7,6 +7,7 @@ Description: Validation Demo Test
 Stages:
   - discover
   - inventory
+  - in-subnet-check-render
   - validation-post-discover
   - fake-hardware-setup
   - validation-post-hardware
